<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="KAD Room Booking"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewRoomInfo"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="70dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/dropdownTimeSelection"
        android:layout_width="125dp"
        android:layout_height="52dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:spinnerMode="dropdown"
        app:layout_constraintStart_toEndOf="@+id/backButtonRoomSelection"
        app:layout_constraintTop_toBottomOf="@+id/datePicker" />

    <DatePicker
        android:id="@+id/datePicker"
        android:layout_width="327dp"
        android:layout_height="430dp"
        android:layout_marginTop="170dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.58"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/backButtonRoomSelection"
        android:layout_width="80dp"
        android:layout_height="45dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:text="Back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/datePicker" />

    <TextView
        android:id="@+id/textViewInstruction"
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:text="Please select a date. Then choose a time to book the room. To book for the selected time, press 'PLACE BOOKING'."
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRoomInfo" />

    <Button
        android:id="@+id/placeBookingButton"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="Place Booking"
        app:layout_constraintStart_toEndOf="@+id/dropdownTimeSelection"
        app:layout_constraintTop_toBottomOf="@+id/datePicker" />

</androidx.constraintlayout.widget.ConstraintLayout>